// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.Footer renders correctly 1`] = `
<body>
  <div>
    <div
      class="box overflowAuto"
      style="max-height: 200px;"
      tabindex="0"
    >
      <table
        class="table"
      >
        <caption
          class="absolute box overflowHidden"
          style="width: 1px; height: 1px; clip: rect(1px, 1px, 1px, 1px); white-space: nowrap;"
        >
          Sticky footer
        </caption>
        <tfoot
          class="tfooter"
        >
          <tr
            class=""
          >
            <td
              class="td"
            >
              <div
                class="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold"
              >
                Total
              </div>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</body>
`;

exports[`Table.Footer sticky footer renders correctly 1`] = `
<body>
  <div>
    <div
      class="box overflowAuto"
      style="max-height: 200px;"
      tabindex="0"
    >
      <table
        class="table"
      >
        <caption
          class="absolute box overflowHidden"
          style="width: 1px; height: 1px; clip: rect(1px, 1px, 1px, 1px); white-space: nowrap;"
        >
          Sticky footer
        </caption>
        <tfoot
          class="stickyFooter"
        >
          <tr
            class=""
          >
            <td
              class="td"
            >
              <div
                class="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold"
              >
                Total
              </div>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</body>
`;
